# data-lakehouse-modern-stack

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
dags/: __init__.py  data_quality_dag.py  maintenance_dag.py  medallion_pipeline_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/bronze/: schema.yml  sources.yml  stg_events.sql
dbt_project/models/gold/: agg_customer_ltv.sql  agg_revenue_daily.sql  schema.yml
dbt_project/models/silver/: dim_customers.sql  fct_orders.sql  schema.yml  sources.yml
dbt_project/tests/: assert_no_negative_revenue.sql
docker/: Dockerfile
docker/postgres/: init.sql
docs/: index.html
infrastructure/: main.tf  outputs.tf  variables.tf
src/: __init__.py  lakehouse_manager.py
src/bronze/: __init__.py  delta_writer.py  iceberg_writer.py
src/gold/: __init__.py  aggregator.py  feature_store.py
src/ingestion/: __init__.py  api_ingester.py  cdc_processor.py  kafka_processor.py  streaming_processor.py
src/maintenance/: __init__.py  cost_optimizer.py  optimizer.py
src/monitoring/: __init__.py  metrics.py
src/quality/: __init__.py  checker.py  profiler.py
src/semantic_search/: __init__.py  api.py  metadata_indexer.py  query_engine.py
src/silver/: __init__.py  transformer.py
tests/: conftest.py  test_ingestion.py  test_lakehouse_manager.py  test_quality.py  test_silver_transformer.py  test_streaming.py
