[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-lakehouse-modern-stack"
version = "1.0.0"
description = "Production-grade open data lakehouse: Delta Lake + Iceberg, medallion architecture, dbt, Trino, GenAI on GCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["data-lakehouse", "delta-lake", "iceberg", "dbt", "trino", "gcp", "medallion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://jthiruveedula.github.io/data-lakehouse-modern-stack"
Repository = "https://github.com/jthiruveedula/data-lakehouse-modern-stack"
Issues = "https://github.com/jthiruveedula/data-lakehouse-modern-stack/issues"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 25
